# dev-space

./: .gitignore  AGENTS.md  Cargo.toml  README.md  main.py  pyproject.toml
.dev-space/: project.toml  quality.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  change.yml  config.yml  decision.yml  epic.yml  maintenance.yml
.github/scripts/: control-plane-contract.py  seed-control-plane-tree.py
.github/workflows/: control-plane-contract.yml  main-gate.yml  pr-check.yml  release.yml
docs/: control-plane-bootstrap-spec.md  github-control-plane-plan.md
docs/adr/: 001-control-plane-contract.md  002-quality-mutation-ratchet.md
src/: lib.rs
src/dev_space/: __init__.py  aop.py  cli.py  config.py  daemon.py  executor.py  identity.py
src/dev_space/control_plane/: __init__.py  authorization.py  github.py  issues.py  journal.py  lifecycle.py  models.py  mutation_score.py  policy.py  pr_contract.py  project_service.py  project_v2.py  quality_policy.py  reconciliation.py  sessions.py  specification.py
src/dev_space/plugins/: __init__.py  daemon.py  gh.py  issue.py  logs.py  project.py  qa.py  session.py  worktree.py
tests/: conftest.py  test_cli.py  test_control_plane_contract.py  test_core.py  test_daemon.py  test_github_project.py  test_identity_and_github.py  test_issue_workflow.py  test_mutation_score.py  test_plugins.py  test_pr_contract.py  test_project_adapters.py  test_qa.py  test_repository_contracts.py  test_sessions.py
tests/__snapshots__/: test_cli.ambr
tests/fixtures/: change-spec.md
tests/fixtures/quality/: cargo-critical-pass.json  mutmut-export-pass.json  mutmut-standard-pass.json  mutmut-standard-regression.json
